add lab1-5 and make rr work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,8 @@
         "kmalloc.h": "c",
         "typeinfo": "c",
         "ulib.h": "c",
-        "console.h": "c"
+        "console.h": "c",
+        "sched.h": "c",
+        "default_sched.h": "c"
     }
 }
