--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "default_sched.h": "c",
         "assert.h": "c",
         "__mutex_base": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "istream": "c"
     }
 }
